# django-react-template

./: pyproject.toml
backend/: db.sqlite3
backend/api/: models.py  serializers.py  views.py
backend/backend/: settings.py  urls.py
frontend/src/pages/: Home.jsx
