[tool.poetry]
name = "django-react-template"
version = "0.1.0"
description = ""
authors = ["Vick Mu <arbi3400@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
asgiref = "^3.8.1"
Django = "^5.0.3"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
PyJWT = "^2.8.0"
sqlparse = "^0.4.4"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
